Header overlap with first photo fix

--- a/src/site.css
+++ b/src/site.css
@@ -49,12 +49,12 @@ body{
 }
 
 .img-container-loading{
-    margin-top: 45px;
+    margin-top: 60px;
     margin-bottom: 10px;
 }
 
 .img-container{
-    margin-top: 45px;
+    margin-top: 60px;
     margin-bottom: 40px;
 }
 
@@ -159,7 +159,7 @@ footer{
     }  
 
     .img-container-loading{
-        margin-top: 45px;
+        margin-top: 60px;
         margin-bottom: 10px;
     }
     
